Inserir link normalize em index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Folha de estilo principal -->
   <link rel="stylesheet" type="text/css" href="/jogo-estourando-baloes/css/estilo_index.css">
 
+  <!-- Folha de estilo normalize -->
+  <link rel="stylesheet" type="text/css" href="/jogo-estourando-baloes/css/normalize.css">
+
 </head>
 
 <body>
