Inserir botão nível jogo

--- a/index.html
+++ b/index.html
@@ -11,11 +11,37 @@
   <!-- Folha de estilo normalize -->
   <link rel="stylesheet" type="text/css" href="/jogo-estourando-baloes/css/normalize.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;600&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
   <div class="layout_principal">
+
+    <div class="fundo_cenario_svg"></div>
+
+    <div class="selecao_nivel">
+
+      <div class="fundo_botao_nivel">
+
+        <select id="nivel_jogo">
+
+          <option value="1">NÍVEL 1</option>
+          <option value="2">NÍVEL 2</option>
+          <option value="3">NÍVEL 3</option>
+
+        </select>
+
+      </div>
+
+
+    </div>
+
+
+
   </div>
 
 </body>
