Inserir botao iniciar

--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 
         </select>
 
-      </div>
+      </div> <!-- /fundo_botao -->
 
+    </div> <!-- /selecao_nível -->
 
-    </div>
+    <div class="botao_iniciar"></div>
 
-
-
-  </div>
+  </div> <!-- /layout_principal -->
 
 </body>
 
