Inserir titulo jogo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
   <div class="layout_principal">
 
+    <div class="titulo_jogo"></div>
+
     <div class="fundo_cenario_svg"></div>
 
     <div class="selecao_nivel">
