Inserir controle de audios

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 
   <div class="layout_principal">
 
+    <div class="audio">
+
+      <img class="audio_controls" id="play" src="/jogo-estourando-baloes/img/elementos_botao_play.svg">
+
+      <img class="audio_controls" id="pause" src="/jogo-estourando-baloes/img/elementos_botao_pause.svg">
+
+    </div>
+
     <div class="titulo_jogo"></div>
 
     <div class="fundo_cenario_svg"></div>
@@ -44,6 +52,9 @@
     <div class="botao_iniciar"></div>
 
   </div> <!-- /layout_principal -->
+
+  <!-- javasrciprt -->
+  <script src="/jogo-estourando-baloes/script/index.js"></script>
 
 </body>
 
